Fix footer not responsive

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ a {
   width: 20%;
 }
 
-.nav img{
+.nav img {
   display: inline-block;
   text-align: center;
   padding: 0px;
@@ -345,6 +345,7 @@ a {
   border-bottom: 1px solid #84849d;
   padding: 1rem;
   height: 4rem;
+  list-style: none;
 }
 .footer-section {
   width: 20%;
@@ -352,11 +353,13 @@ a {
   margin: 0 auto;
   display: grid;
   grid-gap: 1rem;
+  list-style: none;
 }
 
 .footer-section li {
   list-style: inherit;
   padding-bottom: 7px;
+  list-style: none;
 }
 .footer-section a {
   display: inline;
@@ -384,6 +387,12 @@ a {
     width: 70%;
     display: flex;
     justify-content: space-between;
+  }
+  .footer-section,
+  .footer-section a, li{
+    width: 30%;
+    display: grid;
+    font-size: small;
   }
 }
 
